# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml  python_ci.yml
gendiff/: __init__.py  cli.py  diff.py  formatting.py  generate.py  load_data.py  parse_args.py  parse_data.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
tests/: __init__.py  test_gendiff.py
tests/fixtures/: flat_json_output.json  nested_json_output.json  new.json
